--- a/page_one.html
+++ b/page_one.html
@@ -46,7 +46,7 @@
             </a>
 
             <!-- Viber Link -->
-            <a href="viber://call?number=%2B95912345678" target="_blank" rel="noopener noreferrer"
+            <a href="viber://add?number=1234567890" target="_blank" rel="noopener noreferrer"
                class="flex items-center justify-center bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 px-6 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105">
                 <i class="fab fa-viber text-2xl mr-3"></i>
                 <span class="text-lg">Message on Viber</span>
