--- a/page_one.html
+++ b/page_one.html
@@ -29,10 +29,10 @@
         <!-- Contact Text Section -->
         <div class="mb-8 text-center">
             <p class="text-gray-700 leading-relaxed">
-                Thank you for your interest in our services. Whether you have a question, a suggestion, or simply want to learn more about what we do, feel free to reach out. We are committed to providing the best support and look forward to connecting with you.
+                ဤ အက်ပ်ကို ဂိမ်းပေါင်းများစွာ ယုံကြည်စိတ်ချစွာ ဆော့ကစားနိုင်သော ‌အောက်ပါ အေးဂျင့်မှ ပံ့ပိုးပေးထားပါသည်။
             </p>
             <p class="mt-4 text-gray-700 leading-relaxed">
-                Our team is available to assist you with any inquiries you may have. We value your feedback and are always here to help.
+                အေးဂျင့်နှင့် ဆက်သွယ်နိုင်ရန် အောက်ဖော်ပြပါ telegram သို့မဟုတ် viber မှတစ်ဆင့် ဆက်သွယ်ပါ။
             </p>
         </div>
 
