--- a/page_one.html
+++ b/page_one.html
@@ -22,8 +22,8 @@
         <div class="flex flex-col items-center mb-8">
             <!-- Placeholder Logo (replace with your actual logo image) -->
             <img src="https://placehold.co/100x100/A78BFA/ffffff?text=LOGO" alt="Company Logo" class="w-24 h-24 rounded-full mb-4 shadow-md">
-            <h1 class="text-4xl font-bold text-gray-800 text-center mb-2">Contact Us</h1>
-            <p class="text-lg text-gray-600 text-center">We'd love to hear from you!</p>
+            <h1 class="text-4xl font-bold text-gray-800 text-center mb-2">ဆက်သွယ်ရန်</h1>
+            <p class="text-lg text-gray-600 text-center">ယုံကြည်စိတ်ချစွာ ဆက်သွယ်လိုက်ပါ။</p>
         </div>
 
         <!-- Contact Text Section -->
