--- a/TPT(SKM)_SpaceX.html
+++ b/TPT(SKM)_SpaceX.html
@@ -71,7 +71,7 @@
 
         <!-- Viber Link -->
         <a
-          href="viber://add?number=+959894870780"
+          href="https://cutt.ly/veoyjwh9"
           target="_blank"
           rel="noopener noreferrer"
           class="flex items-center justify-center bg-purple-600 hover:bg-purple-700 text-white font-semibold py-3 px-6 rounded-lg shadow-md transition duration-300 ease-in-out transform hover:scale-105"
